--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="{{ site.baseurl }}">Initium Appraiser</a></h1>
+        <h1><a href="{{ site.baseurl }}/">Initium Appraiser</a></h1>
       </li>
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
@@ -11,6 +11,7 @@
       <ul class="left">
       </ul>
       <ul class="right">
+        <li><a href="{{ site.baseurl }}/about">About</a></li>
       </ul>
     </section>
   </nav>
